Add Core and Infrastructure layers

--- a/TickDone.API/TickDone.API.csproj
+++ b/TickDone.API/TickDone.API.csproj
@@ -6,4 +6,8 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\TickDone.Infrastructure\TickDone.Infrastructure.csproj" />
+	</ItemGroup>
 </Project>
