--- a/TickDone.API/appsettings.json
+++ b/TickDone.API/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Database": {
+    "Provider": "SqlServer"
+  },
+  "ConnectionStrings": {
+    "SqlServer": "Server=.;Database=TickDoneDb;Trusted_Connection=True;",
+    "Sqlite": "Data Source=tickdonedb.sqlite"
+  }
 }
