--- a/TickDone.API/TickDone.API.csproj
+++ b/TickDone.API/TickDone.API.csproj
@@ -5,9 +5,13 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\TickDone.Infrastructure\TickDone.Infrastructure.csproj" />
+		<ProjectReference Include="..\TickDone.Infrastructure\TickDone.Infrastructure.csproj" />
 	</ItemGroup>
 </Project>
