Create Sqlite database with mgrations

--- a/TickDone.API/appsettings.Development.json
+++ b/TickDone.API/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Database": {
+    "Provider": "Sqlite"
+  },
+  "ConnectionStrings": {
+    "SqlServer": "Server=.;Database=TickDoneDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "Sqlite": "Data Source=tickdonedb.sqlite"
   }
 }
