--- a/TickDone.API/appsettings.json
+++ b/TickDone.API/appsettings.json
@@ -5,12 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Database": {
-    "Provider": "SqlServer"
-  },
-  "ConnectionStrings": {
-    "SqlServer": "Server=.;Database=TickDoneDb;Trusted_Connection=True;",
-    "Sqlite": "Data Source=tickdonedb.sqlite"
-  }
+  "AllowedHosts": "*"
 }
