Adjust Sqlite folder

--- a/TickDone.API/appsettings.Development.json
+++ b/TickDone.API/appsettings.Development.json
@@ -10,6 +10,6 @@
   },
   "ConnectionStrings": {
     "SqlServer": "Server=.;Database=TickDoneDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
-    "Sqlite": "Data Source=tickdonedb.sqlite"
+    "Sqlite": "Data Source=db/tickdonedb.sqlite"
   }
 }
