--- a/TickDone.API/Dockerfile
+++ b/TickDone.API/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /app
 
 EXPOSE 8080
 EXPOSE 8081
+EXPOSE 3000
 
 # This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
